--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ but living her dreams too.
 </p>
 
     <footer>
-      Always yours,<br>
+      Yours truly, Hildah<br>
       ❤️
     </footer>
   </div>
