--- a/index.html
+++ b/index.html
@@ -99,10 +99,23 @@
       .card { padding: 40px; }
       h1 { font-size: 2.5rem; }
     }
+    body::after {
+      content: "For Immaculate ❤️ ";
+        position: fixed;
+          top: 50%;
+            left: 50%;
+              transform: translate(-50%, -50%) rotate(-30deg);
+                font-size: 40px;
+                  color: rgba(200, 200, 200, 0.7);
+                    pointer-events: none;
+                      z-index: 9999;
+                      }
   </style>
 </head>
 
 <body>
+  
+  }
 
   <div class="card">
     <div class="heart">❤️</div>
