update button under form and body::after in style

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       h1 { font-size: 2.5rem; }
     }
     body::after {
-      content: "For Immaculate ❤️ ";
+      content: "For Immaculate ";
         position: fixed;
           top: 50%;
             left: 50%;
@@ -225,7 +225,7 @@ but living her dreams too.
                 <input type="hidden" name="_subject" value="Valentine Response 💌">
 
                   <p>
-                      <button type="submit">Send 💕</button>
+                      <button type="submit">Send</button>
                         </p>
                       </form>
 
