--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ but living her dreams too.
 <br>
 <p>oh! Typed my heart out… now it’s the part I’ve been nervous about: will you be my Valentine? 
 </p>
-<form action="https://formspree.io/f/abcdwxyz" method="POST">
+<form action="https://formspree.io/f/xwvqgwlp" method="POST">
     <p>
         <label>What do you say? 💖</label><br>
             <textarea name="message" rows="5" placeholder="Type your answer here..." required></textarea>
